# edge-vision-runtime

./: .gitignore  CMakeLists.txt  README.md
algorithm/yolov8_person_detection/: CMakeLists.txt
algorithm/yolov8_person_detection/configs/: yolov8_person_detection.v1.example.yaml
algorithm/yolov8_person_detection/include/evr/algorithm/yolov8_person_detection/: yolov8_person_detector.h
algorithm/yolov8_person_detection/src/: yolov8_person_detector.cpp
algorithm/yolov8_person_detection/tests/: yolov8_person_detector_smoke_test.cpp
cmd/runtime-grpc-supervisor/: main.cpp
cmd/runtime-source/: main.cpp
cmd/runtime-supervisor/: main.cpp
cmd/runtime-worker/: main.cpp
configs/: runtime-multi-stream-gstreamer-nv12-host-smoke.v1.example.yaml  runtime-multi-stream-gstreamer-smoke.v1.example.yaml  runtime-phase1-deployment.v1.example.yaml  runtime-source.v1.example.yaml  runtime-supervisor.v1.example.yaml  runtime-worker.camera-0.direct.local.example.yaml  runtime-worker.camera-0.zlm.local.example.yaml  runtime-worker.v1.example.yaml  runtime-worker.zlm-proxy.v1.example.yaml
docs/: control-plane-runtime-grpc-cpp.md  control-plane-runtime-mapping.md  jetson-gstreamer-hw-decode-probe.md  jetson-rtsp-gstreamer-pipeline-notes.md  phase1-bridge-notes.md  phase1-contracts-wiring.md  phase1-control-plane-runtime-bridge.md  phase1-deployment-test-guide.md  runtime-observability-design.md  zlmediakit-runtime-integration.md
include/evr/runtime/config/: runtime_config_loader.h
include/evr/runtime/deployment/: phase1_deployment.h
include/evr/runtime/graph/: graph.h
include/evr/runtime/observability/: observe_publisher.h
include/evr/runtime/session/: lifecycle_session.h  session_state.h
include/evr/runtime/source/: source_app.h  source_session.h
include/evr/runtime/supervisor/: supervisor_app.h  supervisor_grpc_service.h  supervisor_session.h
include/evr/runtime/worker/: worker_app.h  worker_session.h
scripts/: README.md  check_jetson_hw_decode_env.sh  generate-dual-camera-worker-configs.sh
src/config/: runtime_config_loader.cpp
src/deployment/: phase1_deployment.cpp
src/graph/: graph.cpp
src/observability/: observe_publisher.cpp
src/session/: session_state.cpp
src/source/: source_app.cpp  source_session.cpp
src/supervisor/: supervisor_app.cpp  supervisor_grpc_service.cpp  supervisor_session.cpp
src/worker/: worker_app.cpp  worker_session.cpp
tests/: runtime_file_video_detect_result_smoke_test.cpp  runtime_frontend_osd_multi_stream_smoke_test.cpp  runtime_gstreamer_hw_decode_probe.cpp  runtime_gstreamer_multi_stream_one_algorithm_smoke_test.cpp  runtime_gstreamer_nv12_host_decode_smoke_test.cpp  runtime_gstreamer_nv12_nvmm_device_boundary_test.cpp  runtime_gstreamer_video_decode_smoke_test.cpp  runtime_multi_stream_one_algorithm_smoke_test.cpp  runtime_observability_ndjson_smoke_test.cpp  runtime_rtsp_video_detect_result_smoke_test.cpp  runtime_sessions_smoke_test.cpp  runtime_supervisor_grpc_service_test.cpp  runtime_video_detect_result_smoke_test.cpp  runtime_worker_algorithm_loading_smoke_test.cpp  runtime_worker_observability_publish_smoke_test.cpp
tests/fixtures/: readable-yolov8s.model
